fluxcd/backup/keycloak/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak
spec:
  hosts: [dev.inoa.io]
  gateways: [inoa-dev]
  http:
    - match:
        - uri:
            exact: /auth
        - uri:
            exact: /auth/
      redirect:
        uri: /auth/realms/inoa/account
    - match:
        - uri:
            prefix: /auth
      rewrite:
        uri: /
      route:
        - destination:
            host: keycloak
    # resources are served without realm frontend path /auth
    - match:
        - uri:
            prefix: /resources
      route:
        - destination:
            host: keycloak
